Acts as a proper python module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "bandsox"
 version = "0.1.0"
 description = "Fast Firecracker microVM manager"
 authors = [{name = "Antigravity", email = "antigravity@deepmind.com"}]
+dependencies = [
     "requests",
     "requests-unixsocket",
     "fastapi",
@@ -15,3 +16,6 @@ requires-python = ">=3.8"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[project.scripts]
+bandsox = "bandsox.cli:main"
